<resources>
    <string name="app_name">Solo Trekkers</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    Onboarding Page Strings-->
    <string name="sub_heading_onboarding">Easily manage your income, expenses, and savings</string>

    <!--    Home Page Strings-->
    <string name="hello_home">Hello</string>
    <string name="name_home">Chathushka Navod</string>
    <string name="top_income_home">Income</string>
    <string name="top_expenses_home">Expenses</string>
    <string name="top_investments_home">Investments</string>
    <string name="searchbar_home">Search transactions, reports ...</string>
    <string name="upgrade_line1_home">Get Unlimited Features</string>
    <string name="upgrade_line2_home">Detailed Reports \nand Forecasting</string>
    <string name="transactions_home">Transactions</string>
    <string name="budget_home">Budget</string>
    <string name="reports_home">Reports</string>
    <string name="goals_home">Goals</string>
    <string name="bills_home">Bills</string>
    <string name="loans_home">Loans</string>
    <string name="subscription">Subscription</string>

    <!--    Login Page Strings-->
    <string name="top_login_title">Hi,\nPlease Login</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="remember_password_login">Don\'t Remember Password? Reset</string>
    <string name="other_login">Or Login With</string>
    <string name="login_btn">Login</string>
    <string name="signin_login">Do not have an Account? Sign in</string>

    <!--    Signin Page Strings-->
    <string name="top_signin_title">Hi,\nPlease Signin</string>
    <string name="name_title">Full Name</string>
    <string name="name_hint">Enter Your Full Name</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="confirm_password_hint">Confirm Your Password</string>
    <string name="create_account_btn">Create Account</string>

    <!--    Forgot Password Page Strings-->
    <string name="title_forgot_password">Please Enter Your Email Address To Receive a Verification Code.</string>
    <string name="email_input_forgot_password">Email Address</string>
    <string name="email_hint_forgot_password">Enter Your Email Address</string>
    <string name="another_way_forgot_password">Try Another Way</string>
    <string name="send_btn_forgot_password">Send</string>

    <!--    Verify Email Page Strings-->
    <string name="verify_email_title">Please Enter The 4 Digit Code Sent To navodchathushka@gmail.com</string>
    <string name="resend_email_subtitle">Resend Code</string>
    <string name="verify_code">Verify</string>

    <!--    Create New Password Page Strings-->
    <string name="title_create_new_password">Your New Password Must Be Different from Previously Used Password</string>
    <string name="subtitle_create_new_password">Change Password</string>
    <string name="save_btn_create_new_password">Save</string>

<!--    Settings Page Strings-->
    <string name="notification_settings">Notifications</string>
    <string name="security_settings">Security and Privacy</string>
    <string name="textsize_settings">Text Size</string>
    <string name="language_settings">Language</string>
    <string name="faqs_settings">FAQs</string>
    <string name="logout_settings">Log Out</string>

</resources>