<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verifyEmailPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_4"
    tools:context=".VerifyEmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="32dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/verifyEmailImage"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/message_sent" />

        <TextView
            android:id="@+id/verifyEmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:text="@string/verify_email_title"
            android:textColor="@color/blue_1"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/verifyEmailImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/verificationCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/verifyEmailSubtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/purple_top_button"
                android:hint="5"
                android:padding="15dp"
                android:inputType="number" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/purple_top_button"
                android:hint="4"
                android:padding="15dp"
                android:inputType="number" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/purple_top_button"
                android:hint="8"
                android:padding="15dp"
                android:inputType="number" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/purple_top_button"
                android:hint="4"
                android:padding="15dp"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/verifyEmailSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/resend_email_subtitle"
            android:textColor="@color/blue_1"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/verifyEmailTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verifyEmailButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/banner_background"
            android:text="@string/verify_code"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/verificationCodeLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>